# gstreamer-ar-overlay

./: .gitignore  README.md  meson.build
shaders/: default.vert  eq_columns.frag
src/: gui.cpp  gui.hpp  log.hpp  main.cpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  shader_loader.cpp  shader_loader.hpp  spectrum.cpp  spectrum.hpp
